build command changed

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -22,7 +22,7 @@ pipeline {
           stage('Build') {
             steps {
                 // bat "\"C:\\Program Files (x86)\\MSBuild\\14.0\\Bin\\MSBuild.exe\" MVCPipeline.sln"
-                bat "npm run build"
+                bat "npm build"
             }
         }
         //   stage('Deploy') {
