--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,7 +40,7 @@ pipeline {
     //     }
         stage('Deploy') {
             steps {
-                bat 'xcopy "C:\Users\Madhu\.jenkins\workspace\Angularpipeline\dist\angular-tour-of-heroes" "E:\\Deploy_A3" /s/y/j'
+                bat 'xcopy "C:\\Users\\Madhu\\.jenkins\\workspace\\Angularpipeline\\dist\\angular-tour-of-heroes" "E:\\Deploy_A3" /s/y/j'
 
             }
         }
