--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
             steps {
                 // bat "\"C:\\Program Files (x86)\\MSBuild\\14.0\\Bin\\MSBuild.exe\" MVCPipeline.sln"
                // bat "npm run build --prod"
-                 bat 'npm run build --prod --baseHref=/webapp/ -optimization=true'
+                 bat 'ng run build --prod --baseHref=/webapp/ -optimization=true'
             }
         }
         //   stage('Deploy') {
