--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
             steps {
                 // bat "\"C:\\Program Files (x86)\\MSBuild\\14.0\\Bin\\MSBuild.exe\" MVCPipeline.sln"
                // bat "npm run build --prod"
-                 bat 'ng run build --prod --baseHref=/webapp/ -optimization=true'
+                 bat 'npm run build --prod --baseHref=/webapp/ -optimization=true'
             }
         }
         //   stage('Deploy') {
@@ -40,7 +40,7 @@ pipeline {
     //     }
         stage('Deploy') {
             steps {
-                bat 'xcopy "C:\\Users\\Madhu\\.jenkins\\workspace\\Angularpipeline\\dist\\angular-tour-of-heroes" "E:\\Deploy_A4" /s/y/j'
+                bat 'xcopy "C:\\Users\\Madhu\\.jenkins\\workspace\\Angularpipeline\\dist\\angular-tour-of-heroes" "E:\\Deploy_A3" /s/y/j'
 
             }
         }
